--- a/info.yaml
+++ b/info.yaml
@@ -1,6 +1,6 @@
 # Tiny Tapeout project information
 project:      "MyProj"
-  title:        ""      # Project title
+  title:        "MyProj"      # Project title
   author:       "Paolo"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  ""      # One line description of what your project does
